@@ -1,15 +1,19 @@
 package com.example.NovoTesteCrud.controller;
 
-import com.example.NovoTesteCrud.dto.FeedbackDTO;
+import com.example.NovoTesteCrud.domain.feedback.Feedback;
 import com.example.NovoTesteCrud.domain.feedback.RequestFeedback;
+import com.example.NovoTesteCrud.dto.FeedbackDTO;
 import com.example.NovoTesteCrud.service.FeedbackService;
 import jakarta.validation.Valid;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/feedbacks")
@@ -21,60 +25,73 @@ public class FeedbackController {
     @GetMapping
     public ResponseEntity<List<FeedbackDTO>> getAllFeedbacks() {
         List<FeedbackDTO> feedbacks = feedbackService.getAllFeedbacks()
-                .stream()
-                .map(FeedbackDTO::new)
-                .collect(Collectors.toList());
-
+                .stream().map(FeedbackDTO::new).toList();
         return ResponseEntity.ok(feedbacks);
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<?> getFeedbackById(@PathVariable Long id) {
+        try {
+            FeedbackDTO feedback = new FeedbackDTO(feedbackService.getFeedbackById(id));
+            return ResponseEntity.ok(feedback);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", e.getMessage()));
+        }
     }
 
     @GetMapping("/academia/{academiaId}")
-    public ResponseEntity<List<FeedbackDTO>> getFeedbacksByAcademia(@PathVariable Long academiaId) {
-        List<FeedbackDTO> feedbacks = feedbackService.getFeedbacksByAcademia(academiaId)
-                .stream()
-                .map(FeedbackDTO::new)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(feedbacks);
+    public ResponseEntity<?> getFeedbacksByAcademia(@PathVariable Long academiaId) {
+        try {
+            List<FeedbackDTO> feedbacks = feedbackService.getFeedbacksByAcademia(academiaId)
+                    .stream().map(FeedbackDTO::new).toList();
+            return ResponseEntity.ok(feedbacks);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", e.getMessage()));
+        }
     }
 
     @GetMapping("/personal/{personalId}")
-    public ResponseEntity<List<FeedbackDTO>> getFeedbacksByPersonal(@PathVariable Long personalId) {
-        List<FeedbackDTO> feedbacks = feedbackService.getFeedbacksByPersonal(personalId)
-                .stream()
-                .map(FeedbackDTO::new)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(feedbacks);
+    public ResponseEntity<?> getFeedbacksByPersonal(@PathVariable Long personalId) {
+        try {
+            List<FeedbackDTO> feedbacks = feedbackService.getFeedbacksByPersonal(personalId)
+                    .stream().map(FeedbackDTO::new).toList();
+            return ResponseEntity.ok(feedbacks);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", e.getMessage()));
+        }
     }
 
-    @GetMapping("/user/{userId}")
-    public ResponseEntity<List<FeedbackDTO>> getFeedbacksByUser(@PathVariable Long userId) {
-        List<FeedbackDTO> feedbacks = feedbackService.getFeedbacksByUser(userId)
-                .stream()
-                .map(FeedbackDTO::new)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(feedbacks);
-    }
     @PostMapping
-    public ResponseEntity<Void> registerFeedback(@RequestBody @Valid RequestFeedback data) {
-        feedbackService.registerFeedback(data);
-        return ResponseEntity.ok().build();
+    public ResponseEntity<Map<String, Object>> registerFeedback(@RequestBody @Valid RequestFeedback data) {
+        FeedbackDTO feedbackDTO = new FeedbackDTO(feedbackService.registerFeedback(data));
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("message", "Feedback cadastrado com sucesso!");
+        response.put("feedback", feedbackDTO);
+
+        return ResponseEntity.ok(response);
     }
+
 
     @PutMapping("/{id}")
-    public ResponseEntity<FeedbackDTO> updateFeedback(
-            @PathVariable Long id,
-            @RequestBody @Valid RequestFeedback data) {
-
+    public ResponseEntity<Map<String, Object>> updateFeedback(@PathVariable Long id, @RequestBody @Valid RequestFeedback data) {
         FeedbackDTO updatedFeedback = new FeedbackDTO(feedbackService.updateFeedback(id, data));
-        return ResponseEntity.ok(updatedFeedback);
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("message", "Feedback atualizado com sucesso!");
+        response.put("feedback", updatedFeedback);
+
+        return ResponseEntity.ok(response);
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteFeedback(@PathVariable Long id) {
-        feedbackService.deleteFeedback(id);
-        return ResponseEntity.noContent().build();
+
+    @DeleteMapping("/{id}/user/{userId}")
+    public ResponseEntity<Map<String, String>> deleteFeedback(@PathVariable Long id, @PathVariable Long userId) {
+        feedbackService.deleteFeedback(id, userId);
+        Map<String, String> response = new HashMap<>();
+        response.put("message", "Feedback deletado com sucesso!");
+        return ResponseEntity.ok(response);
     }
+
+
 }
